--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="Image/fav-icon/favicon.ico" type="image/x-icon">
     <title>Device</title>
 </head>
 <body>
@@ -173,7 +174,7 @@
               <li class="slider-list-item first-slider-item" id="slider-1">
                 <h3 class="visually-hidden">Квадрокоптер с лазером</h3>                
                 <div class="promo-img-wrapp">
-                  <img src="image/Image-PNG/slider-1.png" alt="Квадрокоптер оснащенный лазером" class="promo-img">
+                  <img src="Image/Image-PNG/slider-1.png" alt="Квадрокоптер оснащенный лазером" class="promo-img">
                   <div class="slider-arrow-wrapp">
                     <button class="slider-arrow slider-arrow_left_button"><img src="Image/image-SVG/slider-arrow_left.svg" alt="" class="slider-arrow_left"></button>
                     <button class="slider-arrow slider-arrow_right_button"><img src="Image/image-SVG/slider_arrow_right.svg" alt="" class="slider-arrow_left"></button>
